--- a/css/style.css
+++ b/css/style.css
@@ -94,16 +94,13 @@ body {
 
 }
 
-#main {
 
-    margin-top: 50px;
-
-}
 
 #signup {
 
     background-color: rgba(255, 255, 255, 0.918);
     height: 50px;
+    margin-top: 50px;
     
 }
 
@@ -179,4 +176,154 @@ body {
     text-decoration: none;
 
 }
+
+.heroparallax {
+
+    position: relative;
+    top: 0;
+    background-size: cover;
+    background-position: center;
+    min-height: 500px;
+
+}
+
+.heroparallax img {
+
+    position: absolute;
+    width: 100%;
+    z-index: -1;
+
+}
+
+.hero1 {
+
+    
+
+}
+
+.hero4 {
+
+    position: absolute;
+    top:450px;
+    left: 42%;
+    width: 350px;
+
+}
+
+ .trailer-buy {
+
+    position: absolute;
+    top: 770px;
+    left: 41%;
+    
+}
+
+.trailer {
+
+    padding: 10px 23px;
+    background-color: rgba(255, 255, 255, 0.836);
+    position: absolute;
+    width: 130px;
+    text-align: center;
+    
+}
+
+.trailer a {
+
+    text-decoration: none;
+    color: black;
+
+}
+
+.buynow {
+
+    padding: 10px 25px;
+    background-color: rgba(255, 0, 0, 0.644);
+    color: rgba(255, 255, 255, 0.726);
+    position: absolute;
+    left: 200px;
+    width: 130px;
+    text-align: center;
+
+}
+
+.platform {
+
+    position: absolute;
+    left: 790px;
+    top: 830px;
+    
+
+}
+
+.platform img {
+
+    width: 100px;
+    padding: 0px 10px;
+    opacity: .75;
+
+}
+
+.platform a {
+
+    text-decoration: none;
+}
+
+.ps4 {
+
+    border-left: rgba(255, 0, 0, 0.63) 1px solid;
+    border-right: rgba(255, 0, 0, 0.63) 1px solid;
+    padding-top: 10px;
+
+}
+
+.awards {
+
+    position: absolute;
+    left: 670px;
+    top: 900px;
+    width: 600px;
+    
+
+    
+
+}
+
+.awards img {
+
+    width: 75px;
+    filter: grayscale(100%);
+
+    
+}
+
+.awards ul {
+
+    list-style: none;
+    padding-left: 35px;
+    
+}
+
+.awards ul li {
+
+    float: left;
+    padding-left: 10px;
+    
+    
+    
+}
+
+.sredina { 
+
+  margin-left: 130px;
+
+}
+
+.awards img:hover {
+
+    filter: grayscale(0%);
+
+}
+
+    
 
